User: wantedcards page

--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -21,6 +21,10 @@
 	{{#link-to 'user.stats' title="Stats"}}
 		<i class="fas fa-percent pointer fa-2x"></i>
 	{{/link-to}}
+
+	{{#link-to 'user.wanted' title="Recherchées"}}
+		<i class="fas fa-heart pointer fa-2x"></i>
+	{{/link-to}}
 </div>
 
 <hr/>
