--- a/app/templates/user/deckgroups/index.hbs
+++ b/app/templates/user/deckgroups/index.hbs
@@ -17,7 +17,7 @@
 									{{/with}}
 								</div>
 							{{/with}}
-							{{#link-to 'user.deck' deck.id}}
+							{{#link-to 'user.decks.deck' deck.id}}
 								{{deck.name}}
 							{{/link-to}}
 							{{#if deck.url}}
@@ -99,7 +99,7 @@
 										{{/with}}
 									</div>
 								{{/with}}
-								{{#link-to 'user.deck' deck.id}}
+								{{#link-to 'user.decks.deck' deck.id}}
 									{{deck.name}}
 								{{/link-to}}
 								{{#if deck.url}}
