--- a/app/templates/user/decks/index.hbs
+++ b/app/templates/user/decks/index.hbs
@@ -25,6 +25,7 @@
 		<th>Source</th>
 		<th>Classe</th>
 		<th>Nom</th>
+		<th>Lien</th>
 		<th>Cartes</th>
 		<th>Poussière</th>
 		<th>Coût restant</th>
@@ -32,52 +33,72 @@
 		<th>Classé</th>
 		<th><i class="fas fa-heart faded"></i></th>
 	</tr>
-	{{#each alldecks as |deck|}}
-		<tr>
-			<td>{{deck.source.name}}</td>
-			<th class={{concat 'cardclass cardclass-' deck.cardclass.name_fr}}>{{deck.cardclass.name_fr}}</th>
-			<td>
-				{{#link-to 'user.decks.deck' deck.id}}
-					{{deck.name}}
-				{{/link-to}}
-			</td>
-			{{#if deck.size}}
-				<td>{{deck.owned}}/{{deck.size}}</td>
-				<td style="background-color: hsl({{deck.color}});">{{deck.ownedDust}}/{{deck.dust}}</td>
-				<td class={{if (gt missing 0) "missing"}}>{{deck.missingDust}}</td>
-			{{else}}
-				<td></td>
-				<td></td>
-				<td></td>
-			{{/if}}
-			{{#with (filter (action "filterOwned") deck.deckstats) as |deckstats|}}
-				<td>
-					{{#with (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) as |totalstats|}}
-						{{#if (gt totalstats 0)}}
-							{{round (div (mult 100 deckstats.firstObject.wincasual) totalstats)}} %
+	{{#each sources as |source|}}
+		{{#with  (if (eq source.constructor.modelName 'user') model.decks source.decks) as |decks|}}
+			{{#each decks as |deck index|}}
+				<tr>
+					{{#unless index}}
+						<td rowspan={{decks.length}}>
+							{{source.name}}
+							{{#if source.url}}
+								<a href={{deck.source.url}} target="_blank">
+									<i class="fas fa-external-link-alt"></i>
+								</a>
+							{{/if}}
+						</td>
+					{{/unless}}
+					<th class={{concat 'cardclass cardclass-' deck.cardclass.name_fr}}>{{deck.cardclass.name_fr}}</th>
+					<td>
+						{{#link-to 'user.decks.deck' deck.id}}
+							{{deck.name}}
+						{{/link-to}}
+					</td>
+					<td>
+						{{#if deck.url}}
+							<a href={{deck.url}} target="_blank">
+								<i class="fas fa-external-link-alt"></i>
+							</a>
 						{{/if}}
-					{{/with}}
-				</td>
-				<td>
-					{{#with (add deckstats.firstObject.win deckstats.firstObject.loose) as |totalstats|}}
-						{{#if (gt totalstats 0)}}
-							{{round (div (mult 100 deckstats.firstObject.win) totalstats)}} %
-						{{/if}}
-					{{/with}}
-				</td>
-			{{else}}
-				<td></td>
-				<td></td>
-			{{/with}}
-			<th>
-				{{#if (gt deck.ownedDust 0)}}
-					{{#with (filter (action "filterOwned") deck.wanteddecks) as |wanteddecks|}}
-						<i class="fas fa-heart pointer" style="color: red;" {{action "removeWanteddeck" wanteddecks.firstObject}}></i>
+					</td>
+					{{#if deck.size}}
+						<td>{{deck.owned}}/{{deck.size}}</td>
+						<td style="background-color: hsl({{deck.color}});">{{deck.ownedDust}}/{{deck.dust}}</td>
+						<td class={{if (gt missing 0) "missing"}}>{{deck.missingDust}}</td>
 					{{else}}
-						<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" deck}}></i>
+						<td></td>
+						<td></td>
+						<td></td>
+					{{/if}}
+					{{#with (filter (action "filterOwned") deck.deckstats) as |deckstats|}}
+						<td>
+							{{#with (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) as |totalstats|}}
+								{{#if (gt totalstats 0)}}
+									{{round (div (mult 100 deckstats.firstObject.wincasual) totalstats)}} %
+								{{/if}}
+							{{/with}}
+						</td>
+						<td>
+							{{#with (add deckstats.firstObject.win deckstats.firstObject.loose) as |totalstats|}}
+								{{#if (gt totalstats 0)}}
+									{{round (div (mult 100 deckstats.firstObject.win) totalstats)}} %
+								{{/if}}
+							{{/with}}
+						</td>
+					{{else}}
+						<td></td>
+						<td></td>
 					{{/with}}
-				{{/if}}
-			</th>
-		</tr>
+					<th>
+						{{#if (gt deck.ownedDust 0)}}
+							{{#with (filter (action "filterOwned") deck.wanteddecks) as |wanteddecks|}}
+								<i class="fas fa-heart pointer" style="color: red;" {{action "removeWanteddeck" wanteddecks.firstObject}}></i>
+							{{else}}
+								<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" deck}}></i>
+							{{/with}}
+						{{/if}}
+					</th>
+				</tr>
+			{{/each}}
+		{{/with}}
 	{{/each}}
 </table>
