User arenas page

--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -25,6 +25,10 @@
 	{{#link-to 'user.wanted' title="Recherchées"}}
 		<i class="fas fa-heart pointer fa-2x"></i>
 	{{/link-to}}
+
+	{{#link-to 'user.arenas' title="Arène"}}
+		<i class="fas fa-gopuram pointer fa-2x"></i>
+	{{/link-to}}
 </div>
 
 <hr/>
