Revert "User deck: copy deckstring to clipboard"
This reverts commit 41af0449bcb9521c0e2640cfb5fab64129d10ee9.

--- a/app/templates/user/decks/deck.hbs
+++ b/app/templates/user/decks/deck.hbs
@@ -53,8 +53,9 @@
 			{{else}}
 				<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" model.deck}}></i>
 			{{/with}}
-			{{#if model.deck.deckstring}}
-				<i class={{concat "fas fa-file-export pointer" (if deckstringCopied " copied" "")}} title="Exporter" {{action "copyDeckstring"}}></i>
+			<i class="fas fa-file-export pointer" title="Exporter" {{action "showDeckstring"}}></i>
+			{{#if showDeckstring}}
+				{{model.deck.deckstring}}
 			{{/if}}
 			<br/>
 			{{#with (filter (action "filterOwned") model.deck.deckstats) as |deckstats|}}
