--- a/app/templates/user/wanted.hbs
+++ b/app/templates/user/wanted.hbs
@@ -1,7 +1,7 @@
 {{#each groups as |group|}}
 	<div class="card">
 		<div class="image">
-			<img src={{group.card.image}} title={{group.card.cardset.name_fr}} />
+			<img src={{group.card.image}} title={{group.card.cardset.name_fr}} alt={{group.card.name_fr}} />
 		</div>
 		<div class="number">
 			<div class="wanted-decks">
