User decks: batch wanted + batch delete

--- a/app/templates/user/decks/index.hbs
+++ b/app/templates/user/decks/index.hbs
@@ -46,7 +46,9 @@
 								</a>
 							{{/if}}
 							{{#unless (eq source.constructor.modelName 'user')}}
-								<br/><i class="fas fa-trash pointer" title="Supprimer" {{action "deleteDeckgroup" source}}></i>
+								<br/>
+								<i class="fas fa-heart pointer" {{action "toggleWantedDeckgroup" source}}></i>
+								<i class="fas fa-trash pointer" title="Supprimer" {{action "deleteDeckgroup" source}}></i>
 							{{/unless}}
 						</td>
 					{{/unless}}
