--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -9,6 +9,11 @@
 		<i class="fas fa-th pointer fa-2x" alt="Collection"></i>
 	{{/link-to}}
 
+	{{#link-to 'user.userdecks' class="fa-stack fa-1x"  title="Mes decks"}}
+		<i class="fas fa-user pointer fa-stack-2x"></i>
+		<i class="fas fa-layer-group fa-stack" style="color: gray;" alt="Mes decks"></i>
+	{{/link-to}}
+
 	{{#link-to 'user.decks' (query-params cardset=latest) title="Decks"}}
 		<i class="fas fa-layer-group pointer fa-2x" alt="Decks"></i>
 	{{/link-to}}
