Show latest win/loose added

--- a/app/templates/user/decks/deck.hbs
+++ b/app/templates/user/decks/deck.hbs
@@ -80,6 +80,10 @@
 			{{/with}}
 		</h2>
 
+		{{#if latestDeckstat}}
+			{{latestDeckstat}}
+			<br/>
+		{{/if}}
 		{{#if isEditing}}
 			{{textarea value=model.deck.comment cols=80 rows=6}}
 		{{else}}
