--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -9,18 +9,17 @@
 		<i class="fas fa-th pointer fa-2x" alt="Collection"></i>
 	{{/link-to}}
 
-	{{#link-to 'user.userdecks' class="fa-stack fa-1x"  title="Mes decks"}}
-		<i class="fas fa-user pointer fa-stack-2x"></i>
-		<i class="fas fa-layer-group fa-stack" style="color: gray;" alt="Mes decks"></i>
+	{{#link-to 'user.userdecks'  title="Mes decks"}}
+		<i class="fas fa-layer-group pointer fa-2x" alt="Decks"></i>
 	{{/link-to}}
 
 	{{#link-to 'user.decks' (query-params cardset=latest) title="Decks"}}
-		<i class="fas fa-layer-group pointer fa-2x" alt="Decks"></i>
+		<i class="fas fa-book pointer fa-2x" alt="Decks"></i>
 	{{/link-to}}
 
 	{{#link-to 'user.import' class="fa-stack fa-1x" title="Importer un deck"}}
 		<i class="fas fa-layer-group fa-stack-2x"></i>
-		<i class="fas fa-long-arrow-alt-down fa-stack-2x" style="color: green;" alt="Importer"></i>
+		<i class="fas fa-long-arrow-alt-down fa-stack-2x" style="color: cornflowerblue;" alt="Importer"></i>
 	{{/link-to}}
 
 	{{#link-to 'user.stats' title="Stats"}}
